Report Departamentos Done
Added LookUp function to show Departamentos's name.

--- a/ActivosFijos/ReportEmpleado.rdlc
+++ b/ActivosFijos/ReportEmpleado.rdlc
@@ -431,7 +431,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Sum(Fields!Codigo_Departamento.Value)</Value>
+                              <Value>=Lookup(Fields!Codigo_Departamento.Value,Fields!Codigo_Departamento.Value,Fields!Nombre.Value,"DSDepartamento")</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -453,6 +453,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -658,6 +659,30 @@
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
         <rd:TableAdapterName>EmpleadoTableAdapter</rd:TableAdapterName>
+      </rd:DataSetInfo>
+    </DataSet>
+    <DataSet Name="DSDepartamento">
+      <Query>
+        <DataSourceName>ActivosFijosDataSet</DataSourceName>
+        <CommandText>/* Local Query */</CommandText>
+      </Query>
+      <Fields>
+        <Field Name="Codigo_Departamento">
+          <DataField>Codigo_Departamento</DataField>
+          <rd:TypeName>System.Int32</rd:TypeName>
+        </Field>
+        <Field Name="Nombre">
+          <DataField>Nombre</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+      </Fields>
+      <rd:DataSetInfo>
+        <rd:DataSetName>ActivosFijosDataSet</rd:DataSetName>
+        <rd:SchemaPath>C:\Users\AlephCK\Documents\GitHub\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
+        <rd:TableName>Departamento</rd:TableName>
+        <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
+        <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
+        <rd:TableAdapterName>DepartamentoTableAdapter</rd:TableAdapterName>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
