--- a/ActivosFijos/RprtActivo.rdlc
+++ b/ActivosFijos/RprtActivo.rdlc
@@ -6,28 +6,75 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1in</Width>
+              <Width>1.35417in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.38333in</Width>
+              <Width>1.92708in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1in</Width>
+              <Width>1.51875in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>1.26042in</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.58333in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1in</Width>
+              <Width>1.32292in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1in</Width>
+              <Width>1.10417in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>2.58333in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
               <Height>0.25in</Height>
               <TablixCells>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox8">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Codigo</Value>
+                              <Style>
+                                <FontSize>11pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                                <Color>#666666</Color>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox8</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
+                        <BottomBorder>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                          <Width>1pt</Width>
+                        </BottomBorder>
+                        <BackgroundColor>White</BackgroundColor>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="Textbox2">
@@ -46,7 +93,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -87,7 +134,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -128,7 +175,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -169,7 +216,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -210,7 +257,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -251,11 +298,52 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox11</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
+                        <BottomBorder>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                          <Width>1pt</Width>
+                        </BottomBorder>
+                        <BackgroundColor>White</BackgroundColor>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox1">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Codigo de Barra</Value>
+                              <Style>
+                                <FontSize>11pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                                <Color>#666666</Color>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox1</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>None</Style>
@@ -279,6 +367,39 @@
             <TablixRow>
               <Height>0.25in</Height>
               <TablixCells>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="CodigoBR1">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!CodigoBR.Value</Value>
+                              <Style>
+                                <FontWeight>Normal</FontWeight>
+                                <Color>#333333</Color>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>CodigoBR1</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
+                        <BackgroundColor>White</BackgroundColor>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="Descripcion">
@@ -314,14 +435,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Codigo_Departamento">
+                    <Textbox Name="Descripcion1">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Lookup(Fields!Codigo_Departamento.Value,Fields!Codigo_Departamento.Value,Fields!Nombre.Value,"DSDepartamento")</Value>
+                              <Value>=Lookup(Fields!Codigo_Departamento.Value,Fields!Codigo_Departamento.Value, Fields!Nombre.Value,"DSDepartamento")</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -331,7 +452,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Codigo_Departamento</rd:DefaultName>
+                      <rd:DefaultName>Descripcion1</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>None</Style>
@@ -347,14 +468,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="Codigo_Ubicacion">
+                    <Textbox Name="Textbox6">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Lookup(Fields!Codigo_Ubicacion.Value,Fields!Codigo_Ubicacion.Value,Fields!Descripcion.Value,"DSUbicacion")</Value>
+                              <Value>=Lookup(Fields!Codigo_Ubicacion.Value,Fields!Codigo_Ubicacion.Value,Fields!Descripcion.Value, "DSUbicacion")</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -364,7 +485,7 @@
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>Codigo_Ubicacion</rd:DefaultName>
+                      <rd:DefaultName>Textbox6</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>None</Style>
@@ -387,7 +508,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Lookup(Fields!Codigo_TipoActivo.Value,Fields!Codigo_TipoActivo.Value,Fields!Descripcion.Value,"DSTipoActivo")</Value>
+                              <Value>=Lookup(Fields!Codigo_TipoActivo.Value,Fields!Codigo_TipoActivo.Value,Fields!Descripcion.Value, "DSTipoActivo")</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
                                 <Color>#333333</Color>
@@ -409,7 +530,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -424,6 +544,7 @@
                               <Value>=Fields!Fecha_Registro.Value</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
+                                <Format>d</Format>
                                 <Color>#333333</Color>
                               </Style>
                             </TextRun>
@@ -457,6 +578,7 @@
                               <Value>=Sum(Fields!Valor_Compra.Value)</Value>
                               <Style>
                                 <FontWeight>Normal</FontWeight>
+                                <Format>n2</Format>
                                 <Color>#333333</Color>
                               </Style>
                             </TextRun>
@@ -465,6 +587,41 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Valor_Compra</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>None</Style>
+                        </Border>
+                        <BackgroundColor>White</BackgroundColor>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="CodigoBR">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!CodigoBR.Value</Value>
+                              <Style>
+                                <FontFamily>Code39AzaleaRegular3</FontFamily>
+                                <FontWeight>Normal</FontWeight>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>CodigoBR</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>None</Style>
@@ -490,6 +647,8 @@
             <TablixMember />
             <TablixMember />
             <TablixMember />
+            <TablixMember />
+            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -504,7 +663,7 @@
         </TablixRowHierarchy>
         <DataSetName>DSActivosFijos</DataSetName>
         <Height>0.5in</Height>
-        <Width>6.96667in</Width>
+        <Width>12.65416in</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -515,7 +674,7 @@
     <Height>2in</Height>
     <Style />
   </Body>
-  <Width>6.96667in</Width>
+  <Width>12.65416in</Width>
   <Page>
     <LeftMargin>1in</LeftMargin>
     <RightMargin>1in</RightMargin>
@@ -568,10 +727,14 @@
           <DataField>Valor_Compra</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
+        <Field Name="CodigoBR">
+          <DataField>CodigoBR</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>ActivosFijosDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\AlephCK\Documents\GitHub\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
+        <rd:SchemaPath>C:\Users\User\Source\Repos\cbustoswong\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
         <rd:TableName>Activos_Fijos</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
@@ -595,7 +758,7 @@
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>ActivosFijosDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\AlephCK\Documents\GitHub\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
+        <rd:SchemaPath>C:\Users\User\Source\Repos\cbustoswong\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
         <rd:TableName>Departamento</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
@@ -631,7 +794,7 @@
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>ActivosFijosDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\AlephCK\Documents\GitHub\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
+        <rd:SchemaPath>C:\Users\User\Source\Repos\cbustoswong\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
         <rd:TableName>Ubicacion</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
@@ -659,7 +822,7 @@
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>ActivosFijosDataSet</rd:DataSetName>
-        <rd:SchemaPath>C:\Users\AlephCK\Documents\GitHub\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
+        <rd:SchemaPath>C:\Users\User\Source\Repos\cbustoswong\ActivosFijosWinforms\ActivosFijos\ActivosFijosDataSet.xsd</rd:SchemaPath>
         <rd:TableName>Tipo_Activo</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
